Aggiornamenti al notebook e dati

--- a/progetto.ipynb
+++ b/progetto.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Progetto BUL: Analisi dei Dati per Fibra Ottica (FTTH) e Fixed Wireless Access (FWA)\n",
+    "# Analisi dei Dati per Fibra Ottica (FTTH) e Fixed Wireless Access (FWA): Progetto BUL\n",
     "\n",
     "- **Nome:** Melissa Selmanhaskaj\n",
     "- **Ambiente utilizzato:** Anaconda3 python\n",
